# sm-init-app-v2

./: .eslintignore  .gitignore  DEVELOPMENT.md  README.md  eslint.config.mjs  jest.config.js  package.json  public-key.gpg  tsconfig.json
.github/workflows/: ci.yml  pr-build.yml  release.yml
UX/: Notes.md  roadmap.md
public/: index.html
src/: App.tsx  index.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: entitlements.plist  main.rs
src-tauri/src/commands/: cpu.rs  file_dialog.rs  fs.rs  gpu_profiler.rs  mod.rs  post_providers.rs  postcli.rs  profiler.rs
src/Shared/: Constants.ts  Paths.ts  Routes.tsx
src/components/: CircularProgress.tsx  ConsoleTest.tsx  ConsoleView.tsx  GPUedit.tsx  MetafileModal.tsx  POSSummary.tsx  ProfilerResultModal.tsx  ProfilerTable.tsx  VerticalTabs.tsx  accordion.tsx  button.tsx  confirmation.tsx  dir_select_modal.tsx  editCPU.tsx  editGPU.tsx  error.tsx  frames.tsx  image.tsx  input.tsx  modal.tsx  numberInput.tsx  pos_info.tsx  progress.tsx  selectDir.tsx  setupPOS.tsx  table.tsx  texts.tsx  tile.tsx  titles.tsx
src/hooks/: useDebounce.ts  useFileProgress.ts  useMetadataFile.ts  usePosDirectory.ts  useProfiler.ts  useTileHover.ts  usepostcli.js  usepostcli.tsx
src/pages/: Docs.tsx  GPUProfiler.tsx  Generate.tsx  Home.tsx  Profiler.tsx  Progress.tsx
src/services/: parseResponse.tsx  postcliService.js  postcliService.tsx
src/state/: ConsoleContext.tsx  POSProcessContext.tsx  SettingsContext.tsx
src/styles/: GlobalStyle.ts  colors.ts  containers.tsx  globalStyles.ts  mixins.ts  texts.tsx
src/types/: metadata.ts  posProgress.ts  profiler.ts
src/utils/: directoryUtils.tsx  hexUtils.tsx  parseResponse.tsx  pathUtils.tsx  posProgressParser.tsx  postcliUtils.tsx  sizeUtils.tsx  useWhyDidYouUpdate.ts
(+37 files in other folders)
